PlayfulShark/force-app/main/default/objects/Contact/fields/Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Date__c</fullName>
    <label>Closed Date</label>
    <type>Date</type>
</CustomField>