PlayfulShark/force-app/main/default/objects/Contact/fields/Master__c.field-meta.xml
<CustomField>
    <fullName>Master__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Master</label>
    <type>Checkbox</type>
</CustomField>